--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 gtk = { version = "0.6.2", package = "gtk4", features = ["v4_6"] }
 gvdb-macros = "0.1.10"
+kube = { version = "0.86.0", features = ["runtime", "derive"] }
+k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
+tokio = { version = "1", features = ["full"] }
+once_cell = "1.18.0"
