--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ kube = { version = "0.86.0", features = ["runtime", "derive"] }
 k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
 tokio = { version = "1", features = ["full"] }
 once_cell = "1.18.0"
+indexmap = "2.0.2"
