--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gtk = { version = "0.6.2", package = "gtk4", features = ["v4_6"] }
+gtk = { version = "0.7.0", package = "gtk4", features = ["v4_6"] }
 gvdb-macros = "0.1.10"
 kube = { version = "0.86.0", features = ["runtime", "derive"] }
 k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
 tokio = { version = "1", features = ["full"] }
 once_cell = "1.18.0"
 indexmap = "2.0.2"
+adw = { version = "0.5.3", package = "libadwaita", features = ["gtk_v4_6"] }
